now steam api returns an image of random game

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,3 +5,6 @@
     <input type="text" name="steamid">
     <input type="submit" value="Submit">
 </form>
+{% if image %}
+  <img> {{ image }}!</img>
+{% endif %}
