--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,5 +6,5 @@
     <input type="submit" value="Submit">
 </form>
 {% if image %}
-  <img> {{ image }}!</img>
+  <img src="{{ image }}"/>
 {% endif %}
